--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!doctype html>
 
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<script>
+		function setSearchEngine(){
+			let actions = {
+			"google": "https://www.google.com/",
+			"duckDuckGo": "https://www.duckduckgo.com/",
+			"bing": "https://www.bing.com/",
+			"ask": "https://ask.com/"
+			}
+				
+			let getSelectedRadioButton = document.querySelector("input[name=engine]:checked");
+			let getActionURL = actions[getSelectedRadioButton.value];
+			let getSearchForm = document.getElementById("searchForm");
+			getSearchForm.setAttribute('action', getActionURL);
+		}
+		
 		// TODO: create a handler
     window.addEventListener("load", function(){
-        // TODO: register the handler
+		let getSearchForm = document.getElementById("searchForm");
+		getSearchForm.addEventListener('submit', setSearchEngine);
+		// TODO: register the handler
     });
 	</script>
 </head>
@@ -13,7 +30,13 @@
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+	<!-- TODO: add form elements -->
+		<input type="text" name="q"/>
+		<label>Google<input type="radio" name="engine" value="google"/></label>
+		<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"/></label>
+		<label>Bing<input type="radio" name="engine" value="bing"/></label>
+		<label>Ask<input type="radio" name="engine" value="ask"/></label>
+		<input type="submit" value="Go!"/>
 	</form>
 
 </body>
